# surtr-firmware

./: .Dockerfile.swp  .gitignore  Dockerfile  Makefile  README.md  launch.bat  launch.py
.west/: config
application/: west.yml
application/launchpad_controller/: CMakeLists.txt  Kconfig  README.md  prj.conf
application/launchpad_controller/boards/: launchpad_controller.conf  launchpad_controller.overlay  native_sim.conf  native_sim.overlay  native_sim_64.conf  native_sim_64.overlay  nucleo_h723zg.overlay  nucleo_u575zi_q.overlay  qemu_cortex_m3.overlay  stm32f4_disco.overlay
application/launchpad_controller/boards/arm/launchpad_controller/: Kconfig.board  Kconfig.defconfig  Kconfig.launchpad_controller  board.yml  launchpad_controller.dts  launchpad_controller.yaml  launchpad_controller_defconfig
application/launchpad_controller/boards/arm/launchpad_controller/support/: openocd.cfg
application/launchpad_controller/boards/arm/launchpad_controller/support/STM32H7_svd/: Release_Notes.htm
application/launchpad_controller/boards/arm/launchpad_controller/support/STM32H7_svd/STM32H7_svd_V1.9/: STM32H723.svd  STM32H725.svd  STM32H730.svd  STM32H735.svd  STM32H73x.svd  STM32H742.svd  STM32H743.svd  STM32H745_CM4.svd  STM32H745_CM7.svd  STM32H747_CM4.svd  STM32H747_CM7.svd  STM32H753.svd  STM32H755_CM4.svd  STM32H755_CM7.svd  STM32H757_CM4.svd  STM32H757_CM7.svd
application/launchpad_controller/modules/ad4111/: CMakeLists.txt  Kconfig
application/launchpad_controller/modules/ad4111/dts/bindings/: vendor-prefixes.txt
application/launchpad_controller/modules/ad4111/dts/bindings/adc/: analog,ad4111.yaml  analog,ad4111_dummy.yaml
application/launchpad_controller/modules/ad4111/inc/: ad4111.h
application/launchpad_controller/modules/ad4111/src/: ad4111.c  ad4111.h  ad4111_driver.h  ad4111_dummy.c  no_os_spi_impl.c
application/launchpad_controller/modules/ad4111/src/no_os/: ad717x.c  ad717x.h  no_os_alloc.h  no_os_error.h  no_os_spi.c  no_os_spi.h  no_os_util.c  no_os_util.h
application/launchpad_controller/modules/drivers/: CMakeLists.txt
application/launchpad_controller/modules/drivers/dts/: Kconfig.ad4111
application/launchpad_controller/modules/drivers/dts/bindings/: vendor-prefixes.txt
application/launchpad_controller/modules/drivers/dts/bindings/adc/: analog,ad4111.yaml
application/launchpad_controller/modules/drivers/inc/: ad4111.h
application/launchpad_controller/modules/drivers/src/: ad4111.c
application/launchpad_controller/modules/drv8711/: CMakeLists.txt  Kconfig
application/launchpad_controller/modules/drv8711/dts/bindings/adc/: ti,drv8711.yml  ti,drv8711_dummy.yml
application/launchpad_controller/modules/drv8711/src/: drv8711.c  drv8711.h  drv8711_dummy.c
application/launchpad_controller/modules/drv8711/zephyr/: module.yml
application/launchpad_controller/src/: actuation.c  actuation.h  commands.c  commands.proto  fake_network.c  ignition.c  ignition.h  main.c  mock_spi.c  networking.c  networking.h  protocol.c  protocol.h  sensor_vals.options.in  sensor_vals.proto  sensors.c  sensors.h  stepper_motor.c  steppers.c  steppers.h  surtr.proto
application/launchpad_controller/zephyr/: module.yml
dashboard/: actuation.py  adc.py  adc_config.json  adc_config_COLD_TEST.json  adc_config_GUNGNIR_HOT_TEST.json  adc_config_PRESSURE_TEST.json  bin_to_json.py  config.json  config.py  config_COLD_TEST.json  config_GUNGNIR_HOT_TEST.json  config_GUNGNIR_HOT_TEST_orig.json  config_PRESSURE_TEST.json  config_manager.py  constants.py  graph.py  graph2.py  influx_push.py  main.py  parser.py  plot.py  plot2.py  requirements.txt  surtr_pb2.py  widgets.py
